--- a/styles/style.css
+++ b/styles/style.css
@@ -1529,6 +1529,9 @@ i.fa-grip-lines-vertical {
   header .headerBodyFlexBox p.animate__backInLeft {
     font-size: 1.5rem;
   }
+  footer .footerBody > a {
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (orientation: landscape) and (max-width: 640px) and (max-height: 360px) {
@@ -1562,7 +1565,7 @@ i.fa-grip-lines-vertical {
   .about {
     padding-top: 115px;
   }
-  .footer .footerBody {
+  footer .footerBody {
     padding: 65px 0 60px;
   }
 }
